[gd_scene load_steps=21 format=3 uid="uid://mhckwfmi6yo1"]

[ext_resource type="Script" path="res://Scenes/Collectibles/gem.gd" id="1_c61ke"]
[ext_resource type="Texture2D" uid="uid://kfaixciq44ug" path="res://Assets/Graphics/Collectible/gem.png" id="2_wh124"]
[ext_resource type="Texture2D" uid="uid://bh4ifsauhlnhp" path="res://Assets/Graphics/Particles/Star1.png" id="3_a4fmp"]
[ext_resource type="Texture2D" uid="uid://ngkeeouv5yof" path="res://Assets/Graphics/Lightmaps/neutralPoint.webp" id="3_ib1j4"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerSpotlight.gd" id="4_dq5jo"]
[ext_resource type="AudioStream" uid="uid://binoki6dtc4uu" path="res://Assets/SFX/Player/respawn.mp3" id="5_5e2oq"]
[ext_resource type="AudioStream" uid="uid://b7erxcmdiohly" path="res://Assets/SFX/Mechanics/collectible.mp3" id="7_uiscv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_luq4i"]
atlas = ExtResource("2_wh124")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_os184"]
atlas = ExtResource("2_wh124")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f45j"]
atlas = ExtResource("2_wh124")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptabl"]
atlas = ExtResource("2_wh124")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fjghk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_luq4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os184")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f45j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptabl")
}],
"loop": true,
"name": &"Spin",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8u1i6"]
size = Vector2(20, 16)

[sub_resource type="Curve" id="Curve_mtu2y"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.2), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_oc3n5"]
offsets = PackedFloat32Array(0.868644, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="Curve" id="Curve_r77qj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_of1vn"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_io3ae"]
resource_name = "Eat"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.6, 1.6), Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Particles/CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2au7e"]
resource_name = "PopIn"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1.6, 1.6), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_on8pr"]
_data = {
"Eat": SubResource("Animation_io3ae"),
"PopIn": SubResource("Animation_2au7e")
}

[node name="Gem" type="Node2D"]
script = ExtResource("1_c61ke")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_fjghk")
animation = &"Spin"
frame_progress = 0.135639

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_8u1i6")

[node name="Particles" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Particles"]
z_index = -1
position = Vector2(0, -7)
emitting = false
amount = 32
lifetime = 0.4
one_shot = true
explosiveness = 0.92
texture = ExtResource("3_a4fmp")
emission_shape = 3
emission_rect_extents = Vector2(5, 1)
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 100)
initial_velocity_min = 75.0
initial_velocity_max = 100.0
scale_amount_min = 0.1
scale_amount_max = 0.4
scale_amount_curve = SubResource("Curve_mtu2y")
color = Color(0.890196, 0.921569, 0.34902, 1)
color_ramp = SubResource("Gradient_oc3n5")

[node name="Spotlight" type="PointLight2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.6, 0.6)
color = Color(1, 0.980392, 0.803922, 1)
energy = 0.4
range_layer_min = -99
range_item_cull_mask = 3
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
shadow_filter = 2
shadow_filter_smooth = 10.0
shadow_item_cull_mask = 2
texture = ExtResource("3_ib1j4")
script = ExtResource("4_dq5jo")
curve_in = SubResource("Curve_r77qj")
curve_out = SubResource("Curve_of1vn")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_on8pr")
}

[node name="pop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5e2oq")
pitch_scale = 2.0
max_distance = 320.0

[node name="crash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_uiscv")

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
